--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rust_rpi_led_matrix = { path = "../rust_rpi_led_matrix" }
 image = "0.23.1"
 reqwest = { version = "0.10", features = ["json", "blocking"] }
 serde = { version = "1.0.106", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde"] }
